# dashboards

./: .env-example  .gitignore  Dockerfile  README.md  lint.py  pyproject.toml
.github/workflows/: black.yml  digital-ocean.yml  flake.yml
src/: errors.py  main.py  settings.py
src/configs/: database.py  settings.py
src/lib/: encryption.py
src/models/: connection.py  dashboard.py  folder.py  query.py
src/repositories/: connection.py  dashboard.py  folder.py  query.py  registry.py
src/routers/: connections.py  dashboards.py  folders.py  queries.py
src/schemas/: connection.py  dashboard.py  folder.py  query.py
src/services/: connection.py  dashboard.py  folder.py  query.py
